force-app/main/default/objects/PMC_CPQ_ErrorMessageSettings__mdt/PMC_CPQ_ErrorMessageSettings__mdt.object-meta.xml
<CustomObject>
    <description>These error messages settings will be applicable for the Get Price Interface.</description>
    <label>Integration Error Message Settings</label>
    <pluralLabel>PMC_CPQ_IntegrationErrorMessageSettings</pluralLabel>
</CustomObject>