force-app/main/default/objects/PMC_CPQ_ErrorMessageSettings__mdt/fields/PMC_CPQ_ConvertedErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ConvertedErrorMessage__c</fullName>
    <description>The transformed/converted error message will be displayed here.</description>
    <label>Converted Error Message</label>
    <type>TextArea</type>
</CustomField>