force-app/main/default/objects/PMC_CPQ_ErrorMessageSettings__mdt/fields/PMC_CPQ_RegexExpression__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RegexExpression__c</fullName>
    <description>The LIKE Expression should be entered here.</description>
    <label>Regex Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>