force-app/main/default/objects/PMC_CPQ_ErrorMessageSettings__mdt/fields/PMC_CPQ_SampleErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SampleErrorMessage__c</fullName>
    <description>This is used to capture a sample of the types of messages that will be covered.</description>
    <label>Sample Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>